cka-example-yaml/my-configmap-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-configmap-pod
spec:
  containers:
  - name: busybox-c
    image: busybox   # busybox是一个linux工具包，可以执行shell命令
    command: ["/bin/sleep", "100"] # 执行程序休眠100秒
