cka-example-yaml/my-nginx-dep.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: my-nginx-dep
  namespace: default 
  annotations:
    kubernetes.io/change-cause: v2, nginx=1.26.0
spec: 
  replicas: 3 # Pod副本预期数量 
  selector:   # 通过选择器来管理 Pod
    matchLabels: 
      pod: my-nginx 
  template:   # 定义Pod的模板
    metadata: 
      labels: 
        pod: my-nginx # Pod的标签 
    spec: 
      containers: 
      - name: nginx 
        image: nginx:1.26.0
