cka-example-yaml/two_container_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
spec:
  nodeSelector:
    node: work2
  containers:
    - name: nginx
      image: nginx
    - name: busybox
      image: busybox
      command: ["/bin/sh"]
      args: ["-c", "sleep infinity"]
